More filtering and references

--- a/bib1.bib
+++ b/bib1.bib
@@ -7,7 +7,7 @@
 	comment = "published = 2004-08-13T10:46:36Z, updated = 2004-08-13T10:46:36Z, 14 pages, 11 figures, A\&amp;A, in press",
 	doi = "10.1051/0004-6361:20041084",
 	eprint = "astro-ph/0408250v1",
-	journal = "Astron.Astrophys., 426, 985-997",
+	journal = "Astron. Astrophys., 426, 985-997",
 	month = aug,
 	primaryclass = "astro-ph",
 	title = "{Light curves and polarization of accretion- and nuclear-powered millisecond pulsars}",
@@ -39,7 +39,7 @@
 	comment = {published = 2005-10-03T11:58:33Z, updated = 2006-05-17T18:15:48Z, 14 pages, 6 figures; invited review presented at COSPAR Colloquium "Spectra \&amp; Timing of Compact X-ray Binaries", January 17-20, 2005, Mumbai, India. Advances in Space Research, in press},
 	doi = "10.1016/j.asr.2006.04.025",
 	eprint = "astro-ph/0510038v2",
-	journal = "Adv.SpaceRes., 38, 2697-2703",
+	journal = "Adv. SpaceRes., 38, 2697-2703",
 	month = may,
 	primaryclass = "astro-ph",
 	title = "{Accretion-powered millisecond pulsars}",
@@ -55,6 +55,7 @@
 	comment = "published = 2013-04-08T19:38:56Z, updated = 2013-04-08T19:38:56Z, 73 pages, including 26 figures and 8 tables. Submitted to The Astrophysical Journal",
 	doi = "10.1088/0004-637X/776/1/19",
 	eprint = "1304.2330v1",
+	journal = "Astrophys. J., 776, 1, 19, 38",
 	month = apr,
 	primaryclass = "astro-ph.HE",
 	title = "{Determining neutron star masses and radii using energy-resolved waveforms of X-ray burst oscillations}",
@@ -70,7 +71,7 @@
 	comment = "published = 2007-03-06T18:32:44Z, updated = 2007-04-05T19:23:34Z, 8 pages, 4 figures. v2: minor changes. Accepted by the Astrophysical Journal",
 	doi = "10.1086/518648",
 	eprint = "astro-ph/0703123v2",
-	journal = "Astrophys.J., 663, 1244-1251",
+	journal = "Astrophys. J., 663, 1244-1251",
 	month = apr,
 	primaryclass = "astro-ph",
 	title = "{The Oblate Schwarzschild Approximation for Light Curves of Rapidly Rotating Neutron Stars}",
@@ -86,7 +87,7 @@
 	comment = "published = 2006-09-12T15:21:50Z, updated = 2006-09-12T15:21:50Z, Accepted by the Astrophysical Journal. 13 pages \&amp; 7 figures",
 	doi = "10.1086/509103",
 	eprint = "astro-ph/0609325v1",
-	journal = "Astrophys.J., 654, 458-469",
+	journal = "Astrophys. J., 654, 458-469",
 	month = sep,
 	primaryclass = "astro-ph",
 	title = "{Light Curves for Rapidly-Rotating Neutron Stars}",
@@ -102,7 +103,7 @@
 	comment = "published = 2015-09-22T12:09:47Z, updated = 2016-03-15T13:01:13Z, 23 pages, 12 figures, revised version, accepted for publication in A\&amp;A",
 	doi = "10.1051/0004-6361/201527416",
 	eprint = "1509.06561v2",
-	journal = "A\&amp;A, 591, A25",
+	journal = "Astron. Astrophys., 591, A25, 23",
 	month = mar,
 	primaryclass = "astro-ph.HE",
 	title = "{Equation of state constraints for the cold dense matter inside neutron stars using the cooling tail method}",
@@ -119,7 +120,7 @@
 	comment = "published = 2014-04-02T16:46:18Z, updated = 2014-04-02T16:46:18Z, 13 pages, 3 figures",
 	doi = "10.1088/0004-637X/791/2/78",
 	eprint = "1404.0609v1",
-	journal = "The Astrophysical Journal, 791, 2, 78, 11 ",
+	journal = "Astrophys. J., 791, 2, 78, 11 ",
 	month = apr,
 	primaryclass = "astro-ph.HE",
 	url = "http://arxiv.org/abs/1404.0609v1; http://arxiv.org/pdf/1404.0609v1",
@@ -166,7 +167,7 @@
 	eprint = "1206.2727",
 	interhash = "31583b24c74636e7b72b10e2f6895acb",
 	intrahash = "739cf49d37b155e6b250fbc14c9d5bf4",
-	journal = "ArXiv e-prints",
+	journal = "arXiv:1206.2727",
 	keywords = "thesis 1023-timing-paper lmxb amxp",
 	month = jun,
 	primaryclass = "astro-ph.HE",
@@ -178,7 +179,7 @@
 }
 
 @article{twocompmod,
-	author = "{Gierli\'{ }nski}, M. and Done, C. and Barret, D.",
+	author = "{Gierli\'{n}ski}, M. and Done, C. and Barret, D.",
 	journal = "MNRAS, 331, 141",
 	title = "{Phase-resolved X-ray spectroscopy of the millisecond pulsar SAX J1808.4---3658}",
 	year = "2002"
@@ -186,7 +187,7 @@
 
 @article{pechenick,
 	author = "Pechenick, K. R. and Ftaclas, C. and Cohen, J. M.",
-	journal = "APJ, 274, 846-857",
+	journal = "Astrophys. J., 274, 846-857",
 	title = "{Hot spots on neutron stars - The near-field gravitational lens}",
 	year = "1983"
 }
@@ -194,7 +195,7 @@
 @article{poutagierlinskisax,
 	abstract = {The pulse profiles of the accreting X-ray millisecond pulsar SAX J1808.4-3658 at different energies are studied. The two main emission component, the black body and the Comptonized tail that are clearly identified in the time-averaged spectrum, show strong variability with the first component lagging the second one. The observed variability can be explained if the emission is produced by Comptonization in a hot slab (radiative shock) of Thomson optical depth ~0.3-1 at the neutron star surface. The emission patterns of the black body and the Comptonized radiation are different: a "knife"- and a "fan"-like, respectively. We construct a detailed model of the X-ray production accounting for the Doppler boosting, relativistic aberration and gravitational light bending in the Schwarzschild spacetime. We present also accurate analytical formulae for computations of the light curves from rapidly rotating neutron stars using formalism recently developed by Beloborodov (2002). Our model reproduces well the pulse profiles at different energies simultaneously, corresponding phase lags, as well as the time-averaged spectrum. We constrain the compact star mass to be bounded between 1.2 and 1.6 solar masses. By fitting the observed profiles, we determine the radius of the compact object to be R~11 km if M=1.6 M\_sun, while for M=1.2 M\_sun the best-fitting radius is ~6.5 km, indicating that the compact object in SAX J1808.4-3658 can be a strange star. We obtain a lower limit on the inclination of the system of 65 degrees.},
 	archiveprefix = "arXiv",
-	author = "Poutanen, Juri and Gierlinski, Marek",
+	author = "Poutanen, Juri and Gierli\'{n}ski, Marek",
 	comment = "published = 2003-03-04T16:54:23Z, updated = 2003-03-04T16:54:23Z, 11 pages, 7 figures, submitted to MNRAS",
 	doi = "10.1046/j.1365-8711.2003.06773.x",
 	eprint = "astro-ph/0303084v1",
@@ -214,7 +215,7 @@
 	comment = "published = 2002-01-08T21:07:49Z, updated = 2002-01-08T21:07:49Z, accepted to ApJ Letters",
 	doi = "10.1086/339511",
 	eprint = "astro-ph/0201117v1",
-	journal = "Astrophys.J., 566, L85-L88",
+	journal = "Astrophys. J., 566, L85-L88",
 	month = jan,
 	primaryclass = "astro-ph",
 	title = "{Gravitational Bending of Light Near Compact Objects}",
@@ -223,18 +224,18 @@
 	year = "2002"
 }
 
-@article{falkner,
+@mastersThesis{falkner,
 	author = "Falkner, S.",
-	journal = "Master's thesis (Friedrich-Alexander University of Erlangen-Nuremberg)",
 	title = "{Light Bending around Neutron Stars}",
-	year = "2002"
+	year = "Friedrich-Alexander University of Erlangen-Nuremberg (2002)"
+
 }
 
-@article{kaiser,
+@mastersThesis{kaiser,
 	author = "Kaiser, A. D.",
-	journal = "Master's thesis (New York University)",
 	title = "{Computational Experiments in Markov Chain Monte Carlo}",
-	year = "2013"
+	year = "New York University (2013)"
+
 }
 
 @article{ensemble1,
@@ -244,17 +245,16 @@
 	year = "2010"
 }
 
-@article{tuomi,
+@phdThesis{tuomi,
 	author = "Tuomi, M.",
-	journal = "Doctoral thesis (University of Turku)",
 	title = "{Multidata inverse problems and Bayesian solution methods in astronomy}",
-	year = "2013"
+	year = "University of Turku (2013)"
+
 }
 
 @book{mc_methods_book,
 	abstract = "HEIDI",
 	added-at = "2009-10-26T17:15:13.000+0100",
-	address = "Weinheim",
 	author = "Kalos, Malvin H. and Whitlock, Paula A.",
 	biburl = "http://www.bibsonomy.org/bibtex/24e02db0dcc859fdf6f2dee267b1250f6/rhirsch",
 	interhash = "3847020e38ad6fa9d6b4620525bb25da",
@@ -262,7 +262,7 @@
 	isbn = "3-527-40760-X, 978-3-527-40760-6",
 	keywords = "Monte-Carlo-Simulation",
 	language = "eng",
-	publisher = "WILEY-VCH",
+	publisher = "Wiley-VCH",
 	timestamp = "2009-10-26T17:15:13.000+0100",
 	title = "{Monte Carlo methods}",
 	x-fetchedfrom = "Bibsonomy",
@@ -293,13 +293,13 @@
 
 @article{oppenheimer,
 	author = "Oppenheimer, J. R. and Volkoff, G. M.",
-	journal = "Physical Review, 55, 374",
+	journal = "Phys. Rev., 55, 374",
 	year = "1939"
 }
 
 @article{lindbland85,
 	author = "Lind, K. R. and Blandford, R. D.",
-	journal = "APJ, 295, 358-367",
+	journal = "Astrophys. J., 295, 358-367",
 	title = "{Semidynamical models of radio jets - Relativistic beaming and source counts}",
 	year = "1985"
 }
@@ -343,7 +343,7 @@
 	comment = "published = 2006-12-15T17:22:23Z, updated = 2006-12-15T17:22:23Z, 70 pages, 19 figures, submitted to Hans Bethe Centennial Physics Reports",
 	doi = "10.1016/j.physrep.2007.02.003",
 	eprint = "astro-ph/0612440v1",
-	journal = "Phys.Rept., 442, 109-165",
+	journal = "Phys. Rept., 442, 109-165",
 	month = dec,
 	primaryclass = "astro-ph",
 	title = "{Neutron Star Observations: Prognosis for Equation of State Constraints}",
@@ -359,7 +359,7 @@
 	comment = "published = 2010-07-10T22:02:28Z, updated = 2010-10-26T15:13:48Z, 4 pages, 4 figures; NORDITA-2010-45",
 	doi = "10.1103/PhysRevLett.105.161102",
 	eprint = "1007.1746v2",
-	journal = "Phys.Rev.Lett., 105, 161102",
+	journal = "Phys. Rev. Lett., 105, 16, 161102",
 	month = oct,
 	primaryclass = "nucl-th",
 	title = "{Constraints on neutron star radii based on chiral effective field theory interactions}",
@@ -391,7 +391,7 @@
 	comment = "published = 1998-04-13T21:50:12Z, updated = 1998-04-13T21:50:12Z, 39 pages RevTeX including 12 tables. 21 postscript figures. Submitted to Phys. Rev. C",
 	doi = "10.1103/PhysRevC.58.1804",
 	eprint = "nucl-th/9804027v1",
-	journal = "Phys.Rev., C58, 1804-1828",
+	journal = "Phys. Rev., C58, 1804-1828",
 	month = apr,
 	primaryclass = "nucl-th",
 	title = "{The equation of state for nucleon matter and neutron star structure}",
@@ -420,7 +420,7 @@
 	author = "in 't Zand, J. J. M. and Heise, J. and Muller, J. M. and Bazzano, A. and Cocchi, M. and Natalucci, L. and Ubertini, P.",
 	comment = "published = 1998-02-09T08:34:03Z, updated = 1998-02-09T08:34:03Z, 4 pages, 4 figures, published in A\&amp;A March II 1998 issue",
 	eprint = "astro-ph/9802098v1",
-	journal = "Astron.Astrophys., 331, L25-L28",
+	journal = "Astron. Astrophys., 331, L25-L28",
 	month = feb,
 	primaryclass = "astro-ph",
 	title = "{Discovery of the X-ray transient SAX J1808.4-3658, a likely low mass X-ray binary}",
@@ -458,7 +458,7 @@
 	comment = "published = 1997-11-26T21:38:43Z, updated = 1997-11-26T21:38:43Z, 8 pages plus one figure, AASTeX v. 4.0, submitted to The Astrophysical Journal Letters",
 	doi = "10.1086/311335",
 	eprint = "astro-ph/9711325v1",
-	journal = "Astrophys.J., 499, L37",
+	journal = "Astrophys. J., 499, L37",
 	month = nov,
 	primaryclass = "astro-ph",
 	title = "{Bounds on the Compactness of Neutron Stars from Brightness Oscillations}",
@@ -492,7 +492,7 @@
 @article{lattimer2001,
 
 	author = "Lattimer, James M. and Prakash, Maddapa",
-	journal = "Astrophys.J., 550, 426-442",
+	journal = "Astrophys. J., 550, 426-442",
 	title = "{NEUTRON STAR STRUCTURE AND THE EQUATION OF STATE}",
 	year = "2001"
 }
@@ -500,7 +500,7 @@
 @article{link1999,
 
 	author = "Link, B. and Epstein, R. I. and Lattimer, J. M.",
-	journal = "Phys.Rev.Lett., 83, 17, 3362-3365",
+	journal = "Phys. Rev. Lett., 83, 17, 3362-3365",
 	title = "{Pulsar Constraints on Neutron Star Structure and Equation of State}",
 	year = "1999"
 }
@@ -526,7 +526,7 @@
 
 @article{romanova,
 	author = "Romanova, M. M. and Ustyugova, G. V. and Koldoba, A. V. and Lovelace, R. V. E.",
-	journal = "Astrophys.J., 610, 920-932",
+	journal = "Astrophys. J., 610, 920-932",
 	title = "{THREE-DIMENSIONAL SIMULATIONS OF DISK ACCRETION TO AN INCLINED DIPOLE. II. HOT SPOTS AND VARIABILITY}",
 	year = "2004"
 }
@@ -541,7 +541,7 @@
 
 @article{millerlamb2015,
 	author = "Miller, M. Coleman and Lamb, Frederick K.",
-	journal = "Astrophys.J., 808, 1, 31, 20",
+	journal = "Astrophys. J., 808, 1, 31, 20",
 	title = "{Determining Neutron Star Properties by Fitting Oblate-star Waveform Models to X-Ray Burst Oscillations}",
 	year = "2015"
 }
