--- a/mythesis.tex
+++ b/mythesis.tex
@@ -385,7 +385,7 @@ of both mass and radius of observed pulsars using pulse profile modeling.
 
 
 Rotating neutron stars were first detected as radio pulsars in 1967 \cite{gold68}. %http://adsabs.harvard.edu/abs/1968Natur.218..731G
-After that, many different classes of pulsars have been discovered including those situated in low-mass X-ray binaries (LMXBs). LMXBs are systems in which the neutron star accretes matter from a non-collapsed companion (with a relatively low mass $M \lesssim \msun$) via an accretion disc. Accreting millisecond X-ray pulsars (AMXPs) are a subgroup of the LMXBs in which the gas from the accretion disc (stripped from the companion) is channeled onto the magnetic poles of a rapidly rotating neutron star. The result is a pair of "hot spots" \ on the pulsar surface.  This gives rise to the X-ray pulsations with typical periods of a few milliseconds corresponding to the spin frequency of the neutron star. By definition, AMXPs are spinning at frequencies $\nu \ge 100 ~\mathrm{Hz}$ and have weak surface magnetic fields ($B \sim 10^{8-9}$ G) ~\cite{patruno}. A schematic view of the accretion onto the hot spots of the pulsar is shown in Figure \ref{fig:shcematic}.
+After that, many different classes of pulsars have been discovered including those situated in low-mass X-ray binaries (LMXBs). LMXBs are systems in which the neutron star accretes matter from a non-collapsed companion (with a relatively low mass $M \lesssim \msun$) via an accretion disc. Accreting millisecond X-ray pulsars (AMXPs) are a subgroup of the LMXBs in which the gas from the accretion disc (stripped from the companion) is channeled onto the magnetic poles of a rapidly rotating neutron star. The result is a pair of "hot spots" \ on the pulsar surface.  This gives rise to the X-ray pulsations with typical periods of a few milliseconds corresponding to the spin frequency of the neutron star. By definition, AMXPs are spinning at frequencies $\nu \ge 100 ~\mathrm{Hz}$ and have weak surface magnetic fields ($B \sim 10^{8-9}$ G) \cite{patruno}. A schematic view of the accretion onto the hot spots of the pulsar is shown in Figure \ref{fig:shcematic}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -493,7 +493,7 @@ The coherent flux oscillations at the rotational frequency (the light curves) of
 \cite{millerlamb98}%http://adsabs.harvard.edu/abs/1998ApJ...499L..37M
 %, Poutanen, Gierlinski 2003 
 \cite{poutagierlinskisax}. In the S+D approximation the effects of general relativity (gravitational light bending) are modeled as though the star is not rotating using the Schwarzschild metric and the formalism specified by
-Pechenick, Ftaclas, and Cohen (1983) \cite{pechenick}. Rotational effects have been approximated by using special relativistic Doppler transformations as though the star is a rotating object with no gravitational field. The oblate shapes of the rapidly rotating neutron stars have also been taken into account using an empirical formula for the oblate shape \cite{algendy} \cite{morsink}.
+Pechenick, Ftaclas, \& Cohen (1983) \cite{pechenick}. Rotational effects have been approximated by using special relativistic Doppler transformations as though the star is a rotating object with no gravitational field. The oblate shapes of the rapidly rotating neutron stars have also been taken into account using an empirical formula for the oblate shape \cite{algendy} \cite{morsink}.
 
 %Rotational effects are added by introducing Doppler terms as though the star is a rotating object with no gravitational field. The oblate shape of the rapidly rotating neutron stars have also been taken account using an empirical formula for the oblate shape.
 
@@ -987,7 +987,7 @@ The spot could also be modeled to have a more complicated shape. %For a large sp
 
 The new versions of the waveform code have been tested by comparing the pulse profiles to profiles obtained from other theoretical models or from a similar model developed by other groups. In all comparisons we assume the neutron star to be at distance $D = 10$ kpc. In the case of spherical star we have checked that the new version gives the same results as the old one \cite{poutabelo} (which assumed a spherical star and has been shown to give accurate results). 
 
-In the case of oblate star we have compared our light curves to those obtained by Morsink \cite{morsink} and Cadeau \cite{cadeau} (model called oblate S+D). The waveforms are computed for one small spot (we use spot angular size $\rho = 1 \degree$), which emits isotropic blackbody radiation ($\req = 16.4$ km, $M = 1.4$  $\msun$, $\nu = 600$ Hz, and $T_{\mathrm{eff}} = 2$ keV). The oblateness of the star is described with function (\ref{eq:rtheta}). The results are shown in Figures \ref{fig:mor3}, \ref{fig:cad3}, and \ref{fig:cad4}. They are in good agreement except in cases of some very high bending angles. In Figure \ref{fig:mor3} ($\thetas = 49 \degree$ and $i = 70 \degree$) and in Figure \ref{fig:cad4} ($\thetas = 15 \degree$ and $i = 100 \degree$) we see situations when the spot is on the other side of the pulsar and only photons with high bending angles can reach the observer. Instead, in Figure \ref{fig:cad3} ($\thetas = 41 \degree$ and $i = 20 \degree$) most of the spot is all the time observed. 
+In the case of oblate star we have compared our light curves to those obtained by Morsink {\it et al.} (2007) \cite{morsink} and Cadeau {\it et al.} (2006) \cite{cadeau} (model called oblate S+D). The waveforms are computed for one small spot (we use spot angular size $\rho = 1 \degree$), which emits isotropic blackbody radiation ($\req = 16.4$ km, $M = 1.4$  $\msun$, $\nu = 600$ Hz, and $T_{\mathrm{eff}} = 2$ keV). The oblateness of the star is described with function (\ref{eq:rtheta}). The results are shown in Figures \ref{fig:mor3}, \ref{fig:cad3}, and \ref{fig:cad4}. They are in good agreement except in cases of some very high bending angles. In Figure \ref{fig:mor3} ($\thetas = 49 \degree$ and $i = 70 \degree$) and in Figure \ref{fig:cad4} ($\thetas = 15 \degree$ and $i = 100 \degree$) we see situations when the spot is on the other side of the pulsar, and only photons with high bending angles can reach the observer. Instead, in Figure \ref{fig:cad3} ($\thetas = 41 \degree$ and $i = 20 \degree$) most of the spot is all the time observed. 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1017,7 +1017,7 @@ In the case of oblate star we have compared our light curves to those obtained b
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-The profiles of pulsars have also been compared to profiles obtained from full ray tracing method (Nättilä \& Pihajoki 2017, in preparation)), which show very similar results (see Figures \ref{fig:jpulse1}, \ref{fig:jpulse2}, and \ref{fig:jpulse3}). %correspond each other well. 
+The profiles of pulsars have also been compared to profiles obtained from full ray tracing method (Nättilä \& Pihajoki 2017, in preparation), which show very similar results (see Figures \ref{fig:jpulse1}, \ref{fig:jpulse2}, and \ref{fig:jpulse3}). %correspond each other well. 
 The photon number fluxes at $2$, $6$, and $12$ keV energies, along with the bolometric photon number flux, are computed to both spherical ($R(\theta) = \req$) and oblate stars ($R(\theta)$ from equation \ref{rtheta2}). Angular distribution of radiation corresponds either to a blackbody with isotropic beaming (noted as "blackbody") or to a Hopf profile. %so some power-law or what is the energy-dependence then....?
 In the case of spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\thetas = 50 \degree$, $i = 60 \degree$, and $T_{\mathrm{eff}} = 2$ keV) we compute the light curves with two different spinning frequencies ($\nu = 1$ Hz and $\nu = 400$ Hz) and with the spot size $\rho = 1 \degree$ or $30 \degree$ (Figures \ref{fig:jpulse1} and \ref{fig:jpulse2}). In the case of oblate star ($\req = 12$ km, $M = 1.4  ~\msun$, $\nu = 700$ Hz, $i = 45 \degree$, $\rho = 10 \degree$, and $T_{\mathrm{eff}} = 2$ keV) we show the light curves with three different spot colatitudes $\thetas  = 18 \degree$,   $45 \degree$, and $90 \degree$ for the isotropic blackbody, along with $\thetas = 45 \degree$ and Hopf profile.
 
@@ -1343,8 +1343,10 @@ Before obtaining the final posterior probability distributions, we have reduced 
 The same averaged steps are also used in Figure \ref{fig:acexample}, where we show an example of the autocorrelation. The autocorrelations of all the six ensembles from one simulation are presented using the weights as observables (see equation \ref{eq:autocovariance}). The Figure shows the autocorrelation only approximatively since one should make sure that the ensemble averaged weights are calculated for walkers being at a same state of their sequence. We may, however, see that in general the correlation is not very strong, and we have reduced it by taking every fifth sample from the chain.%... Thinning we used is .... (TBD)  
 
 Since MCMC methods contain always noise, we have used digital filtering to reduce it from our posterior probability distributions. One-dimensional histograms have been smoothed using a Savintzky-Golay filter \cite{savgol}.
-It is a method to increase the signal-to-noise ratio without largely distorting the signal... %...
+It is a method to increase the signal-to-noise ratio without largely distorting the signal. This is achieved by fitting subsequent sub-sets of adjacent data points with a low-degree polynomial using the method of linear least squares. The central point of each sub-set is used to evaluate the data. The filter preserves the width of the posterior probability distribution and thus also the credible limits. Two-dimensional histograms are smoothed using a convolution with a two-dimensional Gaussian kernel with a $2\sigma_{\mathrm{E}}$ standard deviation for both axes. %add here what is sigma in pixels/parameter units? 
+In this case the width of the distribution is not exactly preserved, but we use a narrow kernel and convolve multiple times to reduce effects from this. 
 
+%now that we smooth stuff I would add a short paragraph to here about how that is done. I would state that MCMC methods are always noisy and we use some digital filttering to reduce this. Describe shortly that 1-dim histograms are smoothed using Savintzky-Golay filtter. Give short descrption and mention that it preserves the width of the distribution. This is done to preserve credible limits. Then say that 2dim histograms are smoothed using a convolution with a 2d Gaussian kernel. Check kernel 1sigma width, I vaguely rember it was 2 pixels which can be transformed to parameter values by multiplying with grid step width. This does not exactly preserve distribution width but we use narrow kernel and convolve multiple times to reduce effects from this.
 % applied to a set of digital data points for the purpose of smoothing the data, that is, to increase the signal-to-noise ratio without greatly distorting the signal. This is achieved, in a process known as convolution, by fitting successive sub-sets of adjacent data points with a low-degree polynomial by the method of linear least squares. When the data points are equally spaced, an analytical solution to the least-squares equations can be found, in the form of a single set of "convolution coefficients" that can be applied to all data sub-sets, to give estimates of the smoothed signal, (or derivatives of the smoothed signal) at the central point of each sub-set. 
 
 
